# project-2_Zhukova_DPO_NOD

./: .gitignore  Makefile  README.md  database_step_1.cast  database_step_2.cast  db_meta.json  pyproject.toml
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
