[tool.poetry]
name = "project-2-zhukova-dpo-nod"
version = "0.1.0"
description = "Project 2 for DPO NOD course"
authors = ["Daria Zhukova <isaevadv@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"