[tool.poetry]
name = "project-2-zhukova-dpo-nod"
version = "0.1.0"
description = "Project 2 for DPO NOD course"
authors = ["Daria Zhukova <isaevadv@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
prettytable = "<3.10"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]
